# Argo-Community

./: .clang-format  .clang-tidy  .gitignore  ArgoConfig.h.in  ArgoTests.cmake  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-closed.yml  cmake.yml
.run/: All CTest.run.xml  Argo-Community.run.xml
Common/: CMakeLists.txt  Constants.hpp
Common/FileSystem/: CSVHandler.cpp  CSVHandler.hpp  FileHandler.cpp  FileHandler.hpp  IniHandler.cpp  IniHandler.hpp  JsonHandler.cpp  JsonHandler.hpp  XmlHandler.cpp  XmlHandler.hpp  YamlHandler.cpp  YamlHandler.hpp
Common/Graphics/: GLShader.cpp  GLShader.hpp  GLWindow.cpp  GLWindow.hpp
Common/Graphics/OpenGL/: GLCamera.hpp  GLEntity.hpp  GLGame.hpp  GLScene.hpp  GLSprite.cpp  GLSprite.hpp  GLWindow.cpp  GLWindow.hpp
Common/System/: Application.cpp  Application.hpp  Application.tests.cpp  BaseGame.cpp  BaseGame.hpp  BaseWindow.cpp  BaseWindow.hpp  Camera.hpp  Entity.hpp  GLGame.cpp  GLGame.hpp  Game.cpp  Game.hpp  Light.hpp  Program.cpp  Program.hpp  Scene.hpp  Sprite.hpp  ThreadPool.hpp  Window.hpp
Common/System/FileSystem/: CSVHandler.cpp  CSVHandler.hpp  FileHandler.cpp  FileHandler.hpp  IniHandler.cpp  IniHandler.hpp  JsonHandler.cpp  JsonHandler.hpp  XmlHandler.cpp  XmlHandler.hpp  YamlHandler.cpp  YamlHandler.hpp
Common/System/Graphics/: GLShader.cpp  GLShader.hpp  GLWindow.cpp  GLWindow.hpp
Common/Types/: BaseCamera.cpp  BaseCamera.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseGame.cpp  BaseGame.hpp  BaseGame.tests.cpp  BaseLight.cpp  BaseLight.hpp  BaseScene.cpp  BaseScene.hpp  BaseScene.tests.cpp  BaseSprite.cpp  BaseSprite.hpp  BaseWindow.cpp  BaseWindow.hpp  CommonColor.cpp  CommonColor.hpp  CommonColor.tests.cpp  Vec3.hpp  Vec4.hpp  Vertex.hpp  Vertex2D.hpp
Graphics/: CMakeLists.txt
Graphics/OpenGL/: GL2DCamera.cpp  GL2DCamera.hpp  GL2DEntity.cpp  GL2DEntity.hpp  GL2DGame.cpp  GL2DGame.hpp  GL2DGame.tests.cpp  GL2DLight.cpp  GL2DLight.hpp  GL2DScene.cpp  GL2DScene.hpp  GL2DScene.tests.cpp  GL2DShader.cpp  GL2DShader.hpp  GL2DSprite.cpp  GL2DSprite.hpp  GL2DSprite.tests.cpp  GL2DWindow.cpp  GL2DWindow.hpp  GLCamera.cpp  GLCamera.hpp  GLEntity.cpp  GLEntity.hpp  GLGame.cpp  GLGame.hpp  GLGame.tests.cpp  GLLight.cpp  GLLight.hpp  GLScene.cpp  GLScene.hpp  GLScene.tests.cpp  GLShader.cpp  GLShader.hpp  GLSprite.cpp  GLSprite.hpp  GLSprite.tests.cpp  GLWindow.cpp  GLWindow.hpp
Graphics/Vulkan/: VKCamera.cpp  VKCamera.hpp  VKEntity.cpp  VKEntity.hpp  VKGame.cpp  VKGame.hpp  VKLight.cpp  VKLight.hpp  VKScene.cpp  VKScene.hpp  VKShader.cpp  VKShader.hpp  VKSprite.cpp  VKSprite.hpp  VKWindow.cpp  VKWindow.hpp
Networking/: CMakeLists.txt  Networking.cpp  Networking.hpp
Utilities/: CMakeLists.txt  ColorConverter.cpp  ColorConverter.hpp  ColorConverter.tests.cpp  ConsoleMenu.cpp  ConsoleMenu.hpp  ConsoleMenu.tests.cpp
include/ArgoDraft/: ArgoDraft.h
include/libTesting/: helloWorld.h
lib/: ArgoDraft.lib
src/: Runner.cpp  Runner.hpp  main.cpp
